Projet GL/test/src/test/deca/codegen/invalid/created/ima/floatoverflow.ass
	ADDSP #6
	TSTO #7
	BOV stack_overflow_error
; Code de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Code de la table des méthodes de A
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD code.Object.equals, R0
	STORE R0, 4(GB)
	LOAD code.A.getX, R0
	STORE R0, 5(GB)
; Start main program
; Variables declarations:
	NEW #2, R2
	LEA 3(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.A
	POP R2
	STORE R2, 6(GB)
; Beginning of main instructions:
; Appel de méthode :
	ADDSP #1
	LOAD 6(GB), R2
	STORE R2, 0(SP)
	LOAD 0(SP), R2
	CMP #null, R2
	BEQ NullDeferenceError
	LOAD 0(R2), R2
	BSR 2(R2)
	SUBSP #0
	LOAD R0, R2
	HALT
; End main program
code.Object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	SEQ R0
	RTS
init.A:
; Initialisation de A.x
	LOAD #0x0.0p0, R0
	LOAD -2(LB), R1
	STORE R0, 1(R1)
	TSTO #0
; Initialisation explicite de A.x
	LOAD #0x1.fffffep126, R2
	STORE R2, 1(R1)
	RTS
code.A.getX:
; Sauvegarde des registres : 
	TSTO #3
	BOV stack_overflow_error
	PUSH R3
	PUSH R2
	LOAD #100, R2
	FLOAT R2, R2
	LOAD -2(LB), R1
	LOAD 1(R1), R3
	MUL R3, R2
	BOV overflow_error
	LOAD R2, R0
	BRA fin.A.getX
fin.A.getX:
; Restauration des registres : 
	POP R2
	POP R3
	RTS
overflow_error:
	WSTR "Error: Overflow during arithmetic operation"
	WNL
	ERROR
NullDeferenceError:
	WSTR "Error: deferencement null"
	WNL
	ERROR
stack_overflow_error:
	WSTR "Error: Stack Overflow"
	WNL
	ERROR
